# Sortings

./: .gitignore  CMakeLists.txt  README.md  input.txt
.github/workflows/: ci.yml
lib/: reader.c  sortings.c  sortings.h
src/: sort_strings.c
tests/: test_sortings.c
